test/errors/type/undef/tostr.yasl


mt.lookup(undef, .tostr)(1)
